--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             fontFamily: {
@@ -26,8 +27,11 @@
         -moz-osx-font-smoothing: grayscale;
       }
       /* Style date picker icon for dark mode */
-      input[type="date"]::-webkit-calendar-picker-indicator {
+      .dark input[type="date"]::-webkit-calendar-picker-indicator {
         filter: invert(0.8);
+        cursor: pointer;
+      }
+      input[type="date"]::-webkit-calendar-picker-indicator {
         cursor: pointer;
       }
     </style>
@@ -43,7 +47,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-[#1C1C2E]">
+  <body class="bg-gray-50 dark:bg-[#1C1C2E] text-gray-900 dark:text-white transition-colors duration-300">
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
